fix: array filter products issue

--- a/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/order-header-info/order-header-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/warehouse-order-view/order-header-info/order-header-info.component.html
@@ -4,10 +4,10 @@
 			selectedOrder.orderNumber
 		}}</span
 	>
-	<span class="badge badge-primary">{{
+	<span class="badge badge-primary mr-1">{{
 		getStatus(selectedOrder.warehouseStatusText)
 	}}</span>
-	<span class="badge badge-secondary">{{
+	<span class="badge badge-secondary ml-1">{{
 		getStatus(selectedOrder.carrierStatusText)
 	}}</span>
 </div>
