fix: shop web angular auto migrate

--- a/packages/shop-web-angular/src/app/+login/byLocation/byLocation.component.scss
+++ b/packages/shop-web-angular/src/app/+login/byLocation/byLocation.component.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/variables';
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 
 :host {
 	width: 100%;
