--- a/packages/shop-web-angular/src/app/toolbar/toolbar.component.scss
+++ b/packages/shop-web-angular/src/app/toolbar/toolbar.component.scss
@@ -1,5 +1,5 @@
 @import '../../styles/styles';
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 
 .toolbar {
 	min-height: 54px !important;
