--- a/packages/shop-web-angular/src/styles/styles.scss
+++ b/packages/shop-web-angular/src/styles/styles.scss
@@ -1,7 +1,7 @@
 /* this file will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 @import 'variables';
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 // Plus imports for other components in your app.
