--- a/packages/shop-web-angular/src/app/shared/location-popup/location-popup.component.scss
+++ b/packages/shop-web-angular/src/app/shared/location-popup/location-popup.component.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/variables';
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 
 .location-modal-card {
 	i.material-icons {
