--- a/packages/admin-web-angular/src/app/@theme/styles/themes.scss
+++ b/packages/admin-web-angular/src/app/@theme/styles/themes.scss
@@ -9,7 +9,7 @@ $nb-enabled-themes: (default, cosmic, corporate, everlight, everdark, dark);
 $nb-themes: nb-register-theme(
 	(
 		// app wise variables for each theme
-			sidebar-header-gap: 2rem,
+		sidebar-header-gap: 2rem,
 		sidebar-header-height: initial,
 		layout-content-width: 1400px,
 		header-height: 5.45rem,
@@ -18,30 +18,29 @@ $nb-themes: nb-register-theme(
 		card-height-tiny: 13.5rem,
 		select-min-width: 6rem,
 		//
-			//switcher-background: #ebeff5,
-			//switcher-background-percentage: 50%,
-			//drops-icon-line-gadient: -webkit-linear-gradient(#01dbb5, #0bbb79),
-			//
-			//header-button-background: #f5f7fa,
-			//header-button-background-hover: #ebeff5,
-			//header-button-color: #2a2a2a,
-			//header-button-outline: #42db7d,
-			//
-			//list-item-border-width: 1px,
-			//
-			slide-out-background:
-			linear-gradient(270deg, #edf1f7 0%, #e4e9f2 100%),
+		//switcher-background: #ebeff5,
+		//switcher-background-percentage: 50%,
+		//drops-icon-line-gadient: -webkit-linear-gradient(#01dbb5, #0bbb79),
+		//
+		//header-button-background: #f5f7fa,
+		//header-button-background-hover: #ebeff5,
+		//header-button-color: #2a2a2a,
+		//header-button-outline: #42db7d,
+		//
+		//list-item-border-width: 1px,
+		//
+		slide-out-background: linear-gradient(270deg, #edf1f7 0%, #e4e9f2 100%),
 		slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
 		slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 		//
-			//chart-panel-summary-box-shadow: none,
-			//chart-panel-summary-background-color: #ecf2f5,
-			//chart-panel-summary-border-color: #ebeff1,
-			//chart-panel-summary-border-width: 1px,
-			//
-			//ecommerce-card-border-width: 1px,
-			//
-			//progress-bar-background: linear-gradient(90deg, #3edd81 0%, #3bddaf 100%),
+		//chart-panel-summary-box-shadow: none,
+		//chart-panel-summary-background-color: #ecf2f5,
+		//chart-panel-summary-border-color: #ebeff1,
+		//chart-panel-summary-border-width: 1px,
+		//
+		//ecommerce-card-border-width: 1px,
+		//
+		//progress-bar-background: linear-gradient(90deg, #3edd81 0%, #3bddaf 100%),
 	),
 	default,
 	default
@@ -52,40 +51,39 @@ $nb-themes: nb-register-theme(
 		card-height-tiny: 13.5rem,
 		select-min-width: 6rem,
 		// app wise variables for each theme
-			//sidebar-header-gap: 2rem,
-			//sidebar-header-height: initial,
-			//layout-content-width: 1400px,
-			//header-height: 5.45rem,
-			//
-			//font-main: Roboto,
-			//font-secondary: Exo,
-			//
-			//switcher-background: #4e41a5,
-			//switcher-background-percentage: 14%,
-			//drops-icon-line-gadient: -webkit-linear-gradient(#a258fe, #7958fa),
-			//
-			//header-button-background: #4e41a5,
-			//header-button-background-hover: #675cb2,
-			//header-button-color: #ffffff,
-			//header-button-outline: #7659ff,
-			//
-			//list-item-border-width: 1px,
-			//
-			slide-out-background:
-			radial-gradient(circle, #5a37b8 0%, #7b51db 100%),
+		//sidebar-header-gap: 2rem,
+		//sidebar-header-height: initial,
+		//layout-content-width: 1400px,
+		//header-height: 5.45rem,
+		//
+		//font-main: Roboto,
+		//font-secondary: Exo,
+		//
+		//switcher-background: #4e41a5,
+		//switcher-background-percentage: 14%,
+		//drops-icon-line-gadient: -webkit-linear-gradient(#a258fe, #7958fa),
+		//
+		//header-button-background: #4e41a5,
+		//header-button-background-hover: #675cb2,
+		//header-button-color: #ffffff,
+		//header-button-outline: #7659ff,
+		//
+		//list-item-border-width: 1px,
+		//
+		slide-out-background: radial-gradient(circle, #5a37b8 0%, #7b51db 100%),
 		slide-out-shadow-color: 2px 0 3px #29157a,
 		slide-out-shadow-color-rtl: -2px 0 3px #29157a,
 		smart-table-bg-even: transparent,
 		smart-table-bg-active: rgba(0, 0, 0, 0.1),
 		//
-			//chart-panel-summary-box-shadow: none,
-			//chart-panel-summary-background-color: rgba(0, 0, 0, 0.1),
-			//chart-panel-summary-border-color: #332e73,
-			//chart-panel-summary-border-width: 1px,
-			//
-			//ecommerce-card-border-width: 1px,
-			//
-			//progress-bar-background: linear-gradient(90deg, #00c7c7 0%, #00d977 100%),,
+		//chart-panel-summary-box-shadow: none,
+		//chart-panel-summary-background-color: rgba(0, 0, 0, 0.1),
+		//chart-panel-summary-border-color: #332e73,
+		//chart-panel-summary-border-width: 1px,
+		//
+		//ecommerce-card-border-width: 1px,
+		//
+		//progress-bar-background: linear-gradient(90deg, #00c7c7 0%, #00d977 100%),,,,
 	),
 	cosmic,
 	cosmic
@@ -96,38 +94,37 @@ $nb-themes: nb-register-theme(
 		card-height-tiny: 13.5rem,
 		select-min-width: 6rem,
 		// app wise variables for each theme
-			//sidebar-header-gap: 2rem,
-			//sidebar-header-height: initial,
-			//layout-content-width: 1400px,
-			//header-height: 5.45rem,
-			//
-			//font-main: Roboto,
-			//font-secondary: Exo,
-			//
-			//switcher-background: #2b2d34,
-			//switcher-background-percentage: 14%,
-			//drops-icon-line-gadient: -webkit-linear-gradient(#e9e8eb, #a7a2be),
-			//
-			//header-button-background: #2b2d34,
-			//header-button-background-hover: #494a50,
-			//header-button-color: #ffffff,
-			//header-button-outline: #a4abb3,
-			//
-			//list-item-border-width: 1px,
-			//
-			slide-out-background:
-			linear-gradient(270deg, #edf1f7 0%, #e4e9f2 100%),
+		//sidebar-header-gap: 2rem,
+		//sidebar-header-height: initial,
+		//layout-content-width: 1400px,
+		//header-height: 5.45rem,
+		//
+		//font-main: Roboto,
+		//font-secondary: Exo,
+		//
+		//switcher-background: #2b2d34,
+		//switcher-background-percentage: 14%,
+		//drops-icon-line-gadient: -webkit-linear-gradient(#e9e8eb, #a7a2be),
+		//
+		//header-button-background: #2b2d34,
+		//header-button-background-hover: #494a50,
+		//header-button-color: #ffffff,
+		//header-button-outline: #a4abb3,
+		//
+		//list-item-border-width: 1px,
+		//
+		slide-out-background: linear-gradient(270deg, #edf1f7 0%, #e4e9f2 100%),
 		slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
 		slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 		//
-			//chart-panel-summary-box-shadow: none,
-			//chart-panel-summary-background-color: #f7fafb,
-			//chart-panel-summary-border-color: #ebeff1,
-			//chart-panel-summary-border-width: 1px,
-			//
-			//ecommerce-card-border-width: 1px,
-			//
-			//progress-bar-background: linear-gradient(90deg, #ff9f6f 0%, #ff8b97 100%),,
+		//chart-panel-summary-box-shadow: none,
+		//chart-panel-summary-background-color: #f7fafb,
+		//chart-panel-summary-border-color: #ebeff1,
+		//chart-panel-summary-border-width: 1px,
+		//
+		//ecommerce-card-border-width: 1px,
+		//
+		//progress-bar-background: linear-gradient(90deg, #ff9f6f 0%, #ff8b97 100%),,,,
 	),
 	corporate,
 	corporate
