--- a/packages/shop-mobile-ionic/src/app/pages/+language/language.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+language/language.page.html
@@ -6,9 +6,7 @@
 			<ion-menu-button autoHide="false"></ion-menu-button>
 		</ion-buttons>
 
-		<ion-title [ngClass]="platform.isRTL ? 'rtl' : 'ltr'"
-			>{{ 'LANGUAGE_VIEW.TITLE' | translate }}</ion-title
-		>
+		<ion-title [ngClass]="platform.isRTL ? 'rtl' : 'ltr'">{{ 'LANGUAGE_VIEW.TITLE' | translate }}</ion-title>
 		<ion-buttons slot="end">
 			<ion-button (click)="goBack()">
 				<i class="fa fa-angle-left back-btn"></i>
@@ -39,6 +37,10 @@
 			</ion-item>
 			<ion-item>
 				<ion-label>{{ 'SPANISH' | translate }}</ion-label>
+				<ion-radio value="es-ES"></ion-radio>
+			</ion-item>
+			<ion-item>
+				<ion-label>{{ 'FRENCH' | translate }}</ion-label>
 				<ion-radio value="es-ES"></ion-radio>
 			</ion-item>
 		</ion-radio-group>
