feat: french lang support | shop-mobile-ionic

--- a/packages/shop-mobile-ionic/src/app/pages/+language/language.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+language/language.page.html
@@ -41,7 +41,7 @@
 			</ion-item>
 			<ion-item>
 				<ion-label>{{ 'FRENCH' | translate }}</ion-label>
-				<ion-radio value="es-ES"></ion-radio>
+				<ion-radio value="fr-FR"></ion-radio>
 			</ion-item>
 		</ion-radio-group>
 	</ion-list>
